--- a/README.Rmd
+++ b/README.Rmd
@@ -17,38 +17,25 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 <!-- badges: end -->
-
-The goal of filecreateR is to ...
+The purpose of this package is to make file creation easier
+    at the beginning of a new project with the help of the "here" package.
+    
 
 ## Installation
 
-You can install the released version of filecreateR from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of filecreateR from Github with:
 
 ``` r
-install.packages("filecreateR")
+library(devtools)
+install_github("wesley4546/filecreateR")
+library(filecreateR)
 ```
 
 ## Example
 
 This is a basic example which shows you how to solve a common problem:
 
-```{r example}
+```
 library(filecreateR)
-## basic example code
+data_create() #Creates a data file in the project folder that has optional raw and cleaned arguments
 ```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
